Added Feature_Coef Table

--- a/Data3550MidPro_MAIN.ipynb
+++ b/Data3550MidPro_MAIN.ipynb
@@ -22442,6 +22442,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7137941f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This code shows the feature alongside the coefficient that it is associated with.\n",
+    "df_lasso = pd.DataFrame([lasso_coef])\n",
+    "df_lasso.columns = X_train_sc.columns\n",
+    "df_lasso = df_lasso.T\n",
+    "df_lasso=df_lasso.rename(columns = {0:'corr_lasso_coeff'})# corr_lasso_coeff is corresponding lasso coefficients of the variable\n",
+    "df_lasso"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "id": "2165d1f8",
    "metadata": {},
