added summary of model comparison

--- a/Data3550MidPro_MAIN.ipynb
+++ b/Data3550MidPro_MAIN.ipynb
@@ -27512,6 +27512,17 @@
     "\n",
     "df_compare_reg"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a13b2b0a",
+   "metadata": {},
+   "source": [
+    "The bestreg method is built by comparing the absolute value of the model residuals with the minimum residual value.\n",
+    "Using this method, we identified the best model as the Lasso Regression model. \n",
+    "\n",
+    "After comparing the models based on the model stats such as R squared, we can confirm that the Lasso model performed the best out of all 4 on our data."
+   ]
   }
  ],
  "metadata": {
