--- a/Data3550MidPro_MAIN.ipynb
+++ b/Data3550MidPro_MAIN.ipynb
@@ -23904,7 +23904,7 @@
    "id": "b05212fb",
    "metadata": {},
    "source": [
-    "Talk about the diff between lasso and ridge coeff"
+    "There were some major diffrences in the Lasso and Ridge Regression coeffecients as we observed the values of the same coeffecients have both a higher and lower values when compared with each other. For example, the value of coeffeceint PID in the Lasso model has a value of 133.91 while its value in the Ridge Regression is 2027.86. This value diffenence shows the different approaches the each model takes towards reqularization. Since, the Ridge coefficients might be larger in magnitude compared to Lasso regression because it does not encourage sparsity (having many coefficients equal to zero). It shrinks them closer to zero but does not eliminate them entirely."
    ]
   },
   {
