Fixed Formatting issues

--- a/Data3550MidPro_MAIN.ipynb
+++ b/Data3550MidPro_MAIN.ipynb
@@ -1642,12 +1642,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fd12a91",
+   "metadata": {},
+   "source": [
+    "### Summary of Results\n",
+    "The histograms show the value distribution for each variable. Some of the variables, such as \"WasCompleted\" and \"Full Bath\", only have a few distinct values. Others, such as \"Month Sold\", contain many distinct values. Based on the preview of the data, \"Alley\" has some NAN values which will have to be handled before training any of the models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6e7a230be9836cd4",
    "metadata": {
     "collapsed": false
    },
    "source": [
     "## 3. Perform additional Feature Engineering(10 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7808ae31",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Create dummy variables for foundation_type and neighbourhood\n",
+    "* Drop all variables with less than 2500 Non-Null values"
    ]
   },
   {
@@ -3509,7 +3528,7 @@
     "collapsed": false
    },
    "source": [
-    "5) Look at the DF_AH.info() and drop all the variables that have Non-Null count >= 2500."
+    "5) Look at the DF_AH.info() and drop all the variables that have Non-Null count < 2500."
    ]
   },
   {
@@ -18238,12 +18257,28 @@
     "# Display information about the DataFrame\n",
     "df_ah.info()\n",
     "\n",
-    "# Create a new DataFrame with columns having non-null counts >= 2500\n",
+    "# Create a new DataFrame with columns having non-null counts < 2500\n",
     "min_non_null_count = 2500\n",
     "filtered_df = df_ah.dropna(axis=1, thresh=min_non_null_count)\n",
     "\n",
     "# Display the resulting DataFrame\n",
     "filtered_df.head(100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb7af5c9",
+   "metadata": {},
+   "source": [
+    "### Summary of Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05c449bc",
+   "metadata": {},
+   "source": [
+    "In summary, we have created new features and dropped other features with less than 2500 values."
    ]
   },
   {
@@ -18254,6 +18289,17 @@
    },
    "source": [
     "## 4.  Impute the data (10 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2634229",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Check for missing values\n",
+    "* If there are missing values, use a method to handle them\n",
+    "* For the remaining categorical variables, find a way to handle them (either remove them or create dummy variables for them)"
    ]
   },
   {
@@ -18324,22 +18370,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "55ba77ea5067cc08",
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7f284402342eaa3c",
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-23T01:54:52.065738Z",
+     "start_time": "2023-10-23T01:54:51.893656Z"
+    },
     "collapsed": false
    },
+   "outputs": [],
    "source": [
-    "### We need to decide which variables to drop or fill:\n",
+    "# Loop through columns and fill NaN values with the median value for each column\n",
     "\n",
-    "* 'Alley' looks like almost completely empty, so we should drop that one\n",
-    "* 'Mas Vnr Type' and 'Fireplace Qu' are both pretty empty, so I think we should drop those as well.  'Mas Vnr Area' is probably useless without the type, so we can also drop it.\n",
-    "* There are seven variables related to 'basement' that look good enough for us to fill in somehow\n",
-    "* There are seven variables related to 'garage' that look good enough for us to fill in somehow\n",
-    "* 'Pool QC' and 'Misc Feature' look like they can be dropped\n",
-    "* 'Electrical' and 'TotalBathrooms' are the only other variables with missing values, and they are only missing 1, so we can keep them and fill with some method.\n",
-    "\n",
-    "\n"
+    "for column_name, column in filtered_df.items():\n",
+    "    if column.isna().any():  # Check if the column has any NaN values\n",
+    "        median = column.median()\n",
+    "        filtered_df[column_name].fillna(median, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b8733f0",
+   "metadata": {},
+   "source": [
+    "Since we are assuming that the data has a normal distribution, it is safe to have the median fill the NANs, since it represents the value where most data points surround. "
    ]
   },
   {
@@ -18371,27 +18427,6 @@
     "        dummy_variables = pd.get_dummies(column, prefix=column_name)\n",
     "        filtered_df = pd.concat([filtered_df, dummy_variables], axis=1)\n",
     "        filtered_df = filtered_df.drop(column_name, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "7f284402342eaa3c",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-23T01:54:52.065738Z",
-     "start_time": "2023-10-23T01:54:51.893656Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Loop through columns and fill NaN values with the median value for each column\n",
-    "\n",
-    "for column_name, column in filtered_df.items():\n",
-    "    if column.isna().any():  # Check if the column has any NaN values\n",
-    "        median = column.median()\n",
-    "        filtered_df[column_name].fillna(median, inplace=True)"
    ]
   },
   {
@@ -20025,6 +20060,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e31c13be",
+   "metadata": {},
+   "source": [
+    "The rest of the categorical variables were turned into dummy variables because there was simply not much of a reason to remove any of them. Any of those variables could be significant to predicting the SalePrice, so none of them were removed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71fc833b",
+   "metadata": {},
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "831bdba9",
+   "metadata": {},
+   "source": [
+    "In summary, the missing values were filled using the median and the categorical variables were converted into dummy variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd85dc4919f0621a",
    "metadata": {
     "collapsed": false
@@ -20097,10 +20156,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf0b48f9",
+   "metadata": {},
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49e4d3e",
+   "metadata": {},
+   "source": [
+    "The data has been split between training and testing sets. The train and test feature sets have been scaled using standard scalar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d45b70d",
    "metadata": {},
    "source": [
-    "# 6.  Build the Multiple Regression Model"
+    "## 6.  Build the Multiple Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6105f79a",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Build the initial model\n",
+    "* Perform backward elimination to find the most significant features for the model\n",
+    "* Print out the regression equation\n",
+    "* Test the model using the MAPE, RMSE, and Rsquared metrics."
    ]
   },
   {
@@ -20108,7 +20195,7 @@
    "id": "102b52a3",
    "metadata": {},
    "source": [
-    "## Build Initial Model"
+    "### Build Initial Model"
    ]
   },
   {
@@ -21764,7 +21851,7 @@
    "id": "3467739e",
    "metadata": {},
    "source": [
-    "## Iteratively Remove features with p-values > 0.05"
+    "### Iteratively Remove features with p-values > 0.05"
    ]
   },
   {
@@ -21987,7 +22074,6 @@
     }
    ],
    "source": [
-    "# Step 2 and 3: Iteratively remove features with p-values above 0.05\n",
     "insig_features = [] # Store names of insignificant features\n",
     "while True:\n",
     "    # Get the feature with the highest p-value\n",
@@ -22010,7 +22096,7 @@
    "id": "65e8e9ed",
    "metadata": {},
    "source": [
-    "## Create List of Significant Features"
+    "### Create List of Significant Features"
    ]
   },
   {
@@ -22113,7 +22199,7 @@
    "id": "875cdcc1",
    "metadata": {},
    "source": [
-    "## Build The Final Model"
+    "### Build The Final Model"
    ]
   },
   {
@@ -22134,7 +22220,7 @@
    "id": "3f50997b",
    "metadata": {},
    "source": [
-    "## Display Multiple Linear Regression Equation"
+    "### Display Multiple Linear Regression Equation"
    ]
   },
   {
@@ -22916,7 +23002,7 @@
    "id": "835925f2",
    "metadata": {},
    "source": [
-    "## Tests for MAPE, RMSE, and Rsquared"
+    "### Tests for MAPE, RMSE, and Rsquared"
    ]
   },
   {
@@ -23001,10 +23087,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f27a2d6b",
+   "metadata": {},
+   "source": [
+    "### Summary of Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ccbee35",
+   "metadata": {},
+   "source": [
+    "The Multiple Linear Regression Model does a good job of predicting the Sale Price. It explains a good amount of the variance and does not contain an abundance of errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5d5d4147",
    "metadata": {},
    "source": [
     "# 7. Build the LASSO Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "799a79c1",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "\n",
+    "* Find optimal alpha value in order to create the best lasso model\n",
+    "* Test the Model Using MAPE, RMSE, and Rsquared\n",
+    "* Determine if the insignificant features in the multiple linear regression section are present in the lasso model\n",
+    "* Print out the Lasso Regression Equation"
    ]
   },
   {
@@ -23676,12 +23791,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c565c3af",
+   "cell_type": "markdown",
+   "id": "cf1ff698",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Summary of Results\n",
+    "Overall, the lasso regression model does a good job at predicting the SalePrice. It performs better in every metric when compared to the multiple linear regression model, although only slightly. It's MAPE and Rsquared values are acceptable."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23693,10 +23809,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37c8abc3",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Find the best alpha value for the ridge regression model and create the model.\n",
+    "* Perform tests on the model using Rsquared, MAPE, and RMSE.\n",
+    "* Print out the ridge regression equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "60a26449",
    "metadata": {},
    "source": [
-    "a) Build The Model"
+    "### a) Build The Model"
    ]
   },
   {
@@ -23766,10 +23893,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f609fbb",
+   "metadata": {},
+   "source": [
+    "The Rsquared value explains the variance in the data really well. The error is low based on the RMSE and MAPE, which is good as well. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9a34482",
    "metadata": {},
    "source": [
-    "## b) Identify coeffecients of Ridge Regression"
+    "### b) Identify coeffecients of Ridge Regression"
    ]
   },
   {
@@ -23912,7 +24047,7 @@
    "id": "87227697",
    "metadata": {},
    "source": [
-    "## C) Ridge regression equation"
+    "### C) Ridge regression equation"
    ]
   },
   {
@@ -23949,7 +24084,10 @@
    "cell_type": "markdown",
    "id": "6ff7f1f7",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Summary of Results\n",
+    "Overall, the ridge regression model performed well at predicting the Sale Price. It performed a little worse than the lasso regression model, and very similar to the multiple linear regression model. The results are still acceptable."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -23957,6 +24095,18 @@
    "metadata": {},
    "source": [
     "## 9) Kernel Ridge Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fa6b88b",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Find the best alpha value and use it to create the best kernel ridge model. \n",
+    "* Test the model using MAPE, RMSE, and Rsquared.\n",
+    "* Compare to previous models\n",
+    "* Attempt to print out the kernel ridge equation"
    ]
   },
   {
@@ -24038,10 +24188,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0aa75aed",
+   "metadata": {},
+   "source": [
+    "Based on the tests, the kernel ridge model performs horribly when attempting to predict the SalePrice. The error is extremely high and it does not explain any of the variance. This is not the kind of model that one would use for predicting the SalePrice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "220b3b58",
    "metadata": {},
    "source": [
-    "## B) Difference noticed compared to other models"
+    "### B) Difference noticed compared to other models"
    ]
   },
   {
@@ -24102,10 +24260,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d07a577",
+   "metadata": {},
+   "source": [
+    "### Summary of Results\n",
+    "Overall, the kernel ridge regression model performed terribly when attampting to predict SalePrice. It performs far worse than previous models due to it underpredicting. Due to this, it would be better to use any of the previous models for predicting SalePrice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc936721",
    "metadata": {},
    "source": [
     "## 10. Model Comparison and Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91792c18",
+   "metadata": {},
+   "source": [
+    "### Summary of Section\n",
+    "* Comapare the models directly with each other and determine which models would be the best for the company to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66cf1397",
+   "metadata": {},
+   "source": [
+    "### a) Create the visualizations of the residuals from the multiple regression, LASSO regression, Ridge regression and Kernel Ridge regression. You can create several visuals that are useful to gain insights on the residuals of each models separately or together. Explain what you observe from these graphs."
    ]
   },
   {
@@ -24421,6 +24605,22 @@
     "plt.figure(figsize=(20,10)) #changes area of scatterplot\n",
     "sns.lmplot(x='Prediction', y='Residual', data = df_pred_resid, height=7, hue='Reg_Type',\n",
     "           aspect = 1.5, scatter_kws={\"alpha\":0.35,\"s\":250,\"linewidth\":2,\"edgecolor\":\"white\"}), #line_kws={'color': 'red'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05dc3dce",
+   "metadata": {},
+   "source": [
+    "All of the residual graphs, except for the kernel ridge regression, show a similar pattern. For predictions between 100000 and 200000, the residuals are minimal. As the prediction value increaes, the residuals become larger. For the kernel ridge regression model, it is only when the prediction is around 0 for when the residuals are the smallest, however the residuals increase/decrease as the prediction increases, and the residuals change much faster than with the other models. It does look like the lasso model does slightly better than the other models, as there are more residuals hugging the line compared to what the other residual graphs show. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd59b7e",
+   "metadata": {},
+   "source": [
+    "### b)  Study the performance scores obtained from all three models and explain which model the company need to choose for deployment and why? Provide the support for your resoning/decision with the appropriate graphs and tables with a clear explanation."
    ]
   },
   {
@@ -27515,13 +27715,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a13b2b0a",
+   "id": "53c29535",
    "metadata": {},
    "source": [
-    "The bestreg method is built by comparing the absolute value of the model residuals with the minimum residual value.\n",
-    "Using this method, we identified the best model as the Lasso Regression model. \n",
-    "\n",
-    "After comparing the models based on the model stats such as R squared, we can confirm that the Lasso model performed the best out of all 4 on our data."
+    "The table above shows the scores that were made for each regression model. After comparing the models based on the model stats such as R squared, we can confirm that the Lasso model performed the best out of all 4 on our data. It is far more accurate than any of the other models. For this reason, the company should use the lasso model for predicting SalePrice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "291ad1d0",
+   "metadata": {},
+   "source": [
+    "### Summary of Results\n",
+    "When comparing the models to each other, the lasso regression model was shown to be the best out of the 4. The kernel ridge model was shown to be the worst of the 4. The ridge and multiple linear regression models were shown to have relatively similar scores, although the multiple linear regression model was shown to be more accurate."
    ]
   }
  ],
